# semantic-pdf-search

./: .gitignore  README.md  note  setup.py  test.sh
embeddings/Encoder: all-MiniLM-L6-v2/: 1917856543737876156
semantic-pdf-search/: pyproject.toml  setup.py  test.sh
semantic-pdf-search/src/: gui.py  main.py
semantic-pdf-search/src/semantic_pdf_search/: __init__.py  cli.py  gui.py  main.py
src/: benchmarker.py  bert.py  cli.py  garbage.py  gui.py  gui_threaded.py  main.py  main_threaded.py  new.py  playground.py  test.py  test_old.py
