[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-pdf-search"
version = "0.8.0"
description = "Search PDFs semantically"
authors = [{name = "notjonathanlouis"}]
requires-python = ">=3.6"
dependencies = [
    "ttkbootstrap",
    "pymupdf",
    "torch",
    "sentence-transformers"
]

[project.urls]
Homepage = "https://github.com/notjonathanlouis/semantic-pdf-search"

[project.gui-scripts]
semantic-pdf-search = "semantic_pdf_search.gui:main"
